# HTTP-Server

./: CMakeLists.txt  CMakePresets.json
lib/: CMakeLists.txt
lib/netlib/: CMakeLists.txt
lib/netlib/include/: net.h
lib/netlib/src/: net.cpp
lib/threadlib/: CMakeLists.txt
lib/threadlib/include/: thread_pool.h  thread_safe_queue.h
lib/utils/: CMakeLists.txt
lib/utils/include/: result.h
src/Server/: CMakeLists.txt
src/Server/include/: HTTPServer.h  requests.h  static.h
src/Server/src/: HTTPServer.cpp  main.cpp  requests.cpp  static.cpp
static/: index.html  redirects.js
static/colorful/: page.html  script.js  style.css
